--- a/libs/hs/reactive-banana-ghcjs/test.html
+++ b/libs/hs/reactive-banana-ghcjs/test.html
@@ -12,7 +12,7 @@
     <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
     <meta http-equiv="pragma" content="no-cache" />
   </head>
-  <body>
-  </body style="magin: 0px; padding: 0px;">
-  <script language="javascript" src="test.js" defer></script>
+  <body style="margin: 5px; padding: 12px; background-color: #f0f0f0">
+  </body>
+  <script src="test.js" type="text/javascript" defer></script>
 </html>
