--- a/apps/hs/qua-server/static/data/run1/Visibility.html
+++ b/apps/hs/qua-server/static/data/run1/Visibility.html
@@ -8,6 +8,9 @@
   Isovist is the field of view from any particular point. An isovist, or viewshed, is the area in a spatial environment directly visible from a location within the space <sup><a href="#visibility_cite_ref-3">[3]</a></sup>. Isovists have particular relevance to architectural and urban analysis by providing an intuitively way of analyzing the spatial environment from the point of view of individuals.  
 </p>
 <p style="margin: 6px 0px; color: #555;">
+  In city planning and design, the visibility aspect is considered when, for instance, when enhancing highly visible public space with clear sight-lines and entrances/exits, or when clearly defining facades to main streets.  
+</p>
+<p style="margin: 6px 0px; color: #555;">
   For our MOOC exercise you can intuitively work with visibility or you can deepen your knowledge on Space Syntax theory or graph theory and use computational tools such as
   <a href="http://www.spacesyntax.net/software/">depthmap</a> or any GIS software. 
 </p>
